@@ -1,12 +1,11 @@
 package org.assimbly.gateway.web.rest.gateway;
 
-import io.swagger.v3.oas.annotations.Parameter;
-import org.assimbly.gateway.web.rest.util.LogUtil;
-import org.assimbly.gateway.web.rest.util.ResponseUtil;
-import org.assimbly.gateway.web.rest.customvm.LoggerVM;
-
 import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.LoggerContext;
+import io.swagger.v3.oas.annotations.Parameter;
+import org.assimbly.gateway.web.rest.customvm.LoggerVM;
+import org.assimbly.gateway.web.rest.util.LogUtil;
+import org.assimbly.gateway.web.rest.util.ResponseUtil;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -16,7 +15,6 @@ import org.springframework.web.bind.annotation.*;
 import java.io.File;
 import java.net.URISyntaxException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controller for view and managing Log Level at runtime.
@@ -31,7 +29,7 @@ public class LogsResource {
         return context.getLoggerList()
             .stream()
             .map(LoggerVM::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @PutMapping("/logs")
@@ -53,7 +51,7 @@ public class LogsResource {
         produces = {MediaType.TEXT_PLAIN_VALUE}
     )
     public ResponseEntity<String> getLog(
-        @PathVariable(value = "integrationId") Long integrationId,
+        @PathVariable(value = "integrationid") Long integrationId,
         @PathVariable(value = "lines") int lines,
         @Parameter(hidden = true) @RequestHeader(value = "Accept") String mediaType
     ) throws Exception {
